--- a/locale/build.gradle
+++ b/locale/build.gradle
@@ -25,23 +25,4 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-//////// 打包发布配置开始 ////////
-apply plugin: 'maven'
-ext {
-    DIST_PATH = ".."
-    PUBLISH_GROUP_ID = 'com.timecat.component'
-    PUBLISH_ARTIFACT_ID = 'MLang'
-    PUBLISH_VERSION = "2.0.1"
-}
-uploadArchives {
-    repositories.mavenDeployer {
-        def deployPath = file(project.DIST_PATH)
-        repository(url: "file://${deployPath.absolutePath}")
-        pom.project {
-            groupId project.PUBLISH_GROUP_ID
-            artifactId project.PUBLISH_ARTIFACT_ID
-            version project.PUBLISH_VERSION
-        }
-    }
-}
-//////// 打包发布配置结束 ////////
+apply from: "$project.rootDir/library.gradle"
