--- a/moduleConfig.properties
+++ b/moduleConfig.properties
@@ -1,6 +1,6 @@
-# 本地 maven 的路径
+# 本地 maven 的路径，推荐使用绝对路径，尽量不要用相对路径
 localMavenPath=../
-# 本地 gradle 的路径
+# 本地 gradle 的路径，推荐使用绝对路径，尽量不要用相对路径
 localGradlePath=../gradle
 
 PUBLISH_GROUP_ID='com.timecat.component'
