--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
     if (moduleConfig.exists()) {
         moduleConfigProps.load(new FileInputStream(moduleConfig))
     }
-    def localMavenPath = file(moduleConfigProps.localMavenPath)
+    def localMavenDir = file(moduleConfigProps.localMavenPath)
 
     repositories {
         google()
         jcenter()
-//        maven { url "file://${localMavenPath.absolutePath}" }
-        maven { url "https://raw.githubusercontent.com/LinXueyuanStdio/MLang/main/dist" }
+        maven { url "file://${localMavenDir.absolutePath}" }
+        maven { url "https://github.com/LinXueyuanStdio/MLang/raw/main/dist/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
@@ -23,11 +23,18 @@ buildscript {
 }
 
 allprojects {
+    def moduleConfigProps = new Properties()
+    File moduleConfig = rootProject.file("moduleConfig.properties")
+    if (moduleConfig.exists()) {
+        moduleConfigProps.load(new FileInputStream(moduleConfig))
+    }
+    def localMavenDir = file(moduleConfigProps.localMavenPath)
+    
     repositories {
         google()
         jcenter()
-//        maven { url "file://${localMavenPath.absolutePath}" }
-        maven { url "https://raw.githubusercontent.com/LinXueyuanStdio/MLang/main/dist" }
+        maven { url "file://${localMavenDir.absolutePath}" }
+        maven { url "https://github.com/LinXueyuanStdio/MLang/raw/main/dist/" }
     }
 }
 
