--- a/moduleConfig.properties
+++ b/moduleConfig.properties
@@ -1,8 +1,8 @@
 # 本地 maven 的路径，推荐使用绝对路径，尽量不要用相对路径
-localMavenPath=../
+localMavenPath=../dist
 # 本地 gradle 的路径，推荐使用绝对路径，尽量不要用相对路径
 localGradlePath=../gradle
 
-PUBLISH_GROUP_ID='com.timecat.component'
-PUBLISH_ARTIFACT_ID='MLang'
-PUBLISH_VERSION="2.0.2"
+PUBLISH_GROUP_ID=com.timecat.component
+PUBLISH_ARTIFACT_ID=MLang
+PUBLISH_VERSION=2.0.2
