--- a/moduleConfig.properties
+++ b/moduleConfig.properties
@@ -1,4 +1,4 @@
-# 本地 maven 的路径，推荐使用绝对路径，尽量不要用相对路径
+# 本地 maven 的路径
 localMavenPath=./dist
-# 本地 gradle 的路径，推荐使用绝对路径，尽量不要用相对路径
+# 本地 gradle 的路径
 localGradlePath=./gradle
